INT : #25647 fix zoom 200% on firefox

--- a/assets/css/base/footer/_nav-links-externe.scss
+++ b/assets/css/base/footer/_nav-links-externe.scss
@@ -15,6 +15,7 @@
 		flex-wrap: nowrap;
 		padding: 0;
 		margin: 0;
+		gap: 10px;
 	}
 
 	&__item {
@@ -34,6 +35,13 @@
 
 			&:hover {
 				color: $red;
+			}
+
+			span {
+
+				@include media-breakpoint-up(lg) {
+					max-width: 140px;
+				}
 			}
 		}
 
